--- a/main.scss
+++ b/main.scss
@@ -583,8 +583,9 @@ img.sub-img {
     right: -8%;
 }
 
-.carousel .carousel-inner .carousel-item img {
-    border-radius: 1.58vw
+
+.carousel-inner{
+    border-radius: 20px;
 }
 
 .carousel.slide .carousel-indicators.custom {
@@ -597,14 +598,13 @@ img.sub-img {
 .carousel.slide .carousel-indicators .slider-dot {
     height: 8px;
     width: 8px;
-    background-color: #BABABA;
+    background-color: white;
     border-radius: 50%; 
     margin: 0 5px;
     cursor: pointer;
 }
 
 .carousel.slide .carousel-indicators .slider-dot.active {
-    background-color: #009090;
     width: 14px;
     height: 8px;
     border-radius: 45% !important;
@@ -620,8 +620,8 @@ img.sub-img {
     z-index: 1000;
     position: relative;
     left: 0;
-    width: 100%;
-    height: 100vh;
+    // width: 20%;
+    height: 100%;
     background-color: #ffffff;
 }
 
@@ -645,7 +645,7 @@ img.sub-img {
 
 }
 
-.whole-site-c{
-    width: 100%;
-    display: flex;
-}
+// .whole-site-c{
+//     width: 100%;
+//     display: flex;
+// }
