--- a/main.css
+++ b/main.css
@@ -516,8 +516,8 @@ img.sub-img {
   right: -8%;
 }
 
-.carousel .carousel-inner .carousel-item img {
-  border-radius: 1.58vw;
+.carousel-inner {
+  border-radius: 20px;
 }
 
 .carousel.slide .carousel-indicators.custom {
@@ -530,14 +530,13 @@ img.sub-img {
 .carousel.slide .carousel-indicators .slider-dot {
   height: 8px;
   width: 8px;
-  background-color: #BABABA;
+  background-color: white;
   border-radius: 50%;
   margin: 0 5px;
   cursor: pointer;
 }
 
 .carousel.slide .carousel-indicators .slider-dot.active {
-  background-color: #009090;
   width: 14px;
   height: 8px;
   border-radius: 45% !important;
@@ -551,8 +550,7 @@ img.sub-img {
   z-index: 1000;
   position: relative;
   left: 0;
-  width: 100%;
-  height: 100vh;
+  height: 100%;
   background-color: #ffffff;
 }
 
@@ -582,9 +580,4 @@ img.sub-img {
 }
 .all-lista .bg-wh {
   background-color: #F3F9FB !important;
-}
-
-.whole-site-c {
-  width: 100%;
-  display: flex;
 }/*# sourceMappingURL=main.css.map */
