--- a/main.scss
+++ b/main.scss
@@ -2,9 +2,10 @@
 
 
 $pri-bg-color : #008ECC;
+$slider-arrow-bg-color : #f5ffff;
 
 
-@mixin fonta($fon-2 : 14px){
+@mixin fonta($fon-2 : 14px) {
     font-family: 'HK Grotesk';
     font-style: normal;
     font-weight: 500;
@@ -456,7 +457,8 @@ img.sub-img {
 @media (max-width: 810px) {
 
     .hide-track,
-    .hide-offer {
+    .hide-offer ,
+    .hide-deliver {
         display: none;
     }
 
@@ -505,10 +507,6 @@ img.sub-img {
         padding: 0% 2%;
     }
 
-    .hide-deliver {
-        display: none;
-    }
-
     .scnd-line-img {
         padding-right: 10px;
         padding-left: 10px;
@@ -553,15 +551,6 @@ img.sub-img {
 /* _____________________________________________________ */
 
 
-.carousel-control-prev-icon {
-    background-color: #009090;
-    opacity: 100 !important;
-    padding-right: 20px;
-    border-radius: 50%;
-    border: 10px solid white;
-    opacity: 1 !important;
-}
-
 .carousel .pre-next-btn {
     display: flex;
     justify-content: center;
@@ -570,8 +559,8 @@ img.sub-img {
     padding-bottom: 0px;
 }
 
-.pre-pre-btn{
-    left: -8% !important;
+.pre-pre-btn {
+    left: -7.5% !important;
 }
 
 .carousel .next-next-btn {
@@ -580,11 +569,11 @@ img.sub-img {
     align-items: center;
     text-align: center;
     padding-bottom: 0px;
-    right: -8%;
+    right: -7.5%;
 }
 
 
-.carousel-inner{
+.carousel-inner {
     border-radius: 20px;
 }
 
@@ -599,23 +588,19 @@ img.sub-img {
     height: 8px;
     width: 8px;
     background-color: white;
-    border-radius: 50%; 
-    margin: 0 5px;
+    border-radius: 50%;
+    margin: 39px 5px;
     cursor: pointer;
 }
 
-.carousel.slide .carousel-indicators .slider-dot.active {
-    width: 14px;
-    height: 8px;
-    border-radius: 45% !important;
-}
+
 
 .slideeeer {
     margin: 2% 10%;
 }
 
 
-.sidebar{
+.sidebar {
     // display: none;
     z-index: 1000;
     position: relative;
@@ -625,21 +610,26 @@ img.sub-img {
     background-color: #ffffff;
 }
 
-.heading-menu-s{
+.heading-menu-s {
     text-align: center;
     @include fonta(20px);
 }
 
-.all-lista{
-    li{
+ul.all-lista {
+    padding-left: 0rem !important;
+}
+
+.all-lista {
+    li {
         padding-top: 40px;
         text-decoration: none;
-        
-        a{
+
+        a {
             @include fonta(14px);
         }
     }
-    .bg-wh{
+
+    .bg-wh {
         background-color: #F3F9FB !important;
     }
 
@@ -649,3 +639,120 @@ img.sub-img {
 //     width: 100%;
 //     display: flex;
 // }
+
+
+.all-lubhavnu {
+    width: 83.5%;
+    justify-content: space-between;
+    display: flex;
+    position: absolute;
+    color: black;
+    top: 0px;
+    left: 90px;
+    gap: 10px;
+
+    .best-deal {
+        padding-top: 40px;
+        font-family: 'HK Grotesk';
+        font-style: normal;
+        font-weight: 600;
+        font-size: 30px;
+        line-height: 30px;
+        color: #FFFFFF;
+    }
+    
+    .smart-wear {
+        padding-top: 20px;
+        font-family: 'HK Grotesk';
+        font-style: normal;
+        font-weight: 700;
+        font-size: 63px;
+        line-height: 63px;
+        color: #FFFFFF;
+    }
+    
+    .upto-off {
+        padding-top: 20px;
+        font-family: 'HK Grotesk';
+        font-style: normal;
+        font-weight: 600;
+        font-size: 30px;
+        line-height: 30px;
+        color: #FFFFFF;
+    }
+
+    .wrist-watch{
+        padding-top: 24px;
+        align-self: flex-start;
+    }
+}
+
+.carousel-item {
+    position: relative;
+}
+
+.d-block{
+    height: 316px;
+    background-color: #212844;
+}
+.d-block-1{
+    background-color: #2b0303;
+}
+.d-block-2{
+    background-color: #354e1e;
+}
+
+.carousel-control-next-icon, .carousel-control-prev-icon {
+    display: inline-block;
+    width: 4rem !important;
+    height: 4rem !important;
+    background-repeat: no-repeat;
+    background-position: 50%;
+    background-size: 30% !important;
+}
+
+
+
+// .carousel-control-prev-icon {
+//     background-color: #d9ffff !important;
+//     opacity: 100 !important;
+//     padding-right: 20px;
+//     border-radius: 50%;
+//     border: 10px solid white;
+// }
+
+// .carousel-control-prev-icon {
+//     background-color: #d9ffff;
+//     opacity: 100 !important;
+//     padding-right: 20px;
+//     border-radius: 50%;
+//     border: 10px solid white;
+// }
+
+.slider-left-arrow{
+    background-color: $slider-arrow-bg-color !important;
+    opacity: 100 !important;
+    padding: 23px;
+    border-radius: 50%;
+    border: 8px solid white;
+}
+
+.slider-right-arrow{
+    background-color: $slider-arrow-bg-color !important;
+    opacity: 100 !important;
+    padding: 23px;
+    border-radius: 50%;
+    border: 8px solid white;
+}
+
+.carousel-control-next, .carousel-control-prev {
+    opacity: unset !important;
+}
+
+
+@media (max-width: 1355px) {
+    .carousel.slide .carousel-indicators.custom {
+        margin: 5px;
+        justify-content: center;
+    }
+}
