--- a/main.css
+++ b/main.css
@@ -427,7 +427,7 @@ img.sub-img {
   z-index: 1000;
   position: relative;
   left: 0;
-  height: 100%;
+  height: 100vh;
   background-color: #ffffff;
 }
 
@@ -763,8 +763,7 @@ ul.all-lista {
   .all-asided {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    align-items: baseline;
   }
   .hide-logo-side {
     display: block;
@@ -776,7 +775,12 @@ ul.all-lista {
     border-radius: 50%;
   }
   .hide-txt-side {
-    display: none;
+    padding-top: 0px;
+  }
+  .all-lista li {
+    padding-top: 40px;
+    text-decoration: none;
+    display: flex;
   }
   .scnd-nav {
     padding: 1% 10%;
@@ -791,8 +795,15 @@ ul.all-lista {
     background-color: #F3F9FB;
   }
   input {
-    font-size: 10px !important;
+    font-size: 12px !important;
     border: none;
+  }
+  .all-lista li {
+    padding-top: 40px;
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
   }
   .heading-menu-s {
     font-weight: 400;
@@ -801,6 +812,25 @@ ul.all-lista {
   }
   .heading-menu-s {
     margin-top: 10px;
+  }
+  a.kya {
+    margin-left: 10px;
+  }
+  .for-sidebaar {
+    position: absolute;
+  }
+  .sidebar {
+    width: 200%;
+  }
+  .sidebar-close-btn {
+    display: block;
+    width: 25px;
+    height: auto;
+    padding: 0 !important;
+  }
+  .button-for-flex {
+    display: flex;
+    justify-content: flex-end;
   }
 }
 @media (max-width: 1000px) {
@@ -852,7 +882,8 @@ ul.all-lista {
   .pre-pre-btn {
     left: 0% !important;
   }
-  .carousel-control-next, .carousel-control-prev {
+  .carousel-control-next,
+  .carousel-control-prev {
     width: 0% !important;
   }
   .scnd-nav-sec-1 {
@@ -860,6 +891,28 @@ ul.all-lista {
   }
   .grab-the-best-deal {
     padding: 0 3%;
+  }
+  .slid1 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+  .sldr-inside {
+    height: 510px !important;
+  }
+  .slid1-card {
+    width: 35%;
+  }
+}
+@media (max-width: 895px) {
+  .slid1-card {
+    width: 50% !important;
+  }
+}
+@media (max-width: 600px) {
+  .slid1-card {
+    width: 80% !important;
   }
 }
 @media (max-width: 950px) {
@@ -975,4 +1028,248 @@ ul.all-lista {
   line-height: 20px;
   text-align: center;
   color: #222222;
+}
+
+.sldr {
+  margin-top: 50px;
+  overflow: hidden;
+}
+
+.sldr-inside {
+  width: 100%;
+  position: relative;
+  height: 208px;
+}
+
+.slid1 {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: space-between;
+  position: absolute;
+  gap: 15px;
+  transition: 1s;
+}
+
+.slid1-card {
+  width: 33.33%;
+  border-radius: 16px;
+  display: flex;
+}
+.slid1-card.c1-d1 {
+  background: #000000;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.slid1-card.c1-d2 {
+  background: #FFF3CC;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.slid1-card.c1-d3 {
+  background: #FFECDF;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.slid1-card .iphone-txt {
+  padding: 9px 20px;
+  font-family: "HK Grotesk";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 17px;
+  letter-spacing: 0.1em;
+  color: #FFFFFF;
+  background: #494949;
+  border-radius: 8px;
+}
+.slid1-card .realme-txt {
+  padding: 9px 20px;
+  font-family: "HK Grotesk";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 17px;
+  letter-spacing: 0.1em;
+  color: #FFFFFF;
+  background: #F6DE8D;
+  border-radius: 8px;
+  margin-bottom: 25px;
+}
+.slid1-card .xiaomi-txt {
+  padding: 9px 20px;
+  font-family: "HK Grotesk";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 17px;
+  letter-spacing: 0.1em;
+  color: #FFFFFF;
+  background: #FFD1B0;
+  border-radius: 8px;
+}
+
+.imgg img {
+  padding: 8px 0px;
+}
+
+.prenexbtn {
+  text-align: center;
+}
+
+.pr-btn,
+.nxt-btn,
+.ext-btn {
+  content: "";
+  background-color: #D9D9D9;
+  height: 8px;
+  width: 8px;
+  border: none;
+  border-radius: 50%;
+}
+
+.wandering-cardd {
+  border: none !important;
+  width: 187px !important;
+  justify-content: center;
+  display: flex;
+  align-items: center;
+}
+.wandering-cardd .its-small-imgg {
+  text-align: center;
+  width: 100%;
+  background-color: #F5F5F5;
+  border-radius: 16px;
+}
+.wandering-cardd .card-img-topp1 {
+  width: 176px;
+}
+.wandering-cardd .card-body {
+  padding-top: 5px;
+}
+.wandering-cardd .second-deals-txt {
+  font-family: "Hanken Grotesk", sans-serif;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 20px;
+  text-align: center;
+  color: #666666;
+}
+.wandering-cardd .card-upto-txt {
+  font-family: "Hanken Grotesk", sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 20px;
+  text-align: center;
+  color: #222222;
+}
+
+.Daily-esse .card-group1 {
+  gap: 14px;
+}
+
+.final-sec {
+  margin-top: 120px;
+  background: #008ECC;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  width: 100%;
+  padding-top: 80px;
+  gap: 90px;
+  padding-left: 8.75%;
+  padding-bottom: 83px;
+  flex-wrap: wrap;
+}
+.final-sec .constcts-div {
+  display: flex;
+  flex-direction: column;
+}
+.final-sec .contact-us-txt {
+  font-family: "Hanken Grotesk", sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 20px;
+  color: #FFFFFF;
+  padding-top: 34px;
+}
+.final-sec .logo-div {
+  text-align: left;
+  justify-self: flex-end;
+}
+.final-sec .whatsapp,
+.final-sec .call-us {
+  padding-top: 20px;
+  display: flex;
+  font-family: "Hanken Grotesk", sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
+  color: #FFFFFF;
+}
+.final-sec .stores {
+  margin-top: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+
+.pop-categories,
+.cust-service {
+  font-family: "Hanken Grotesk", sans-serif;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 20px;
+  color: #FFFFFF;
+  align-self: baseline;
+}
+.pop-categories ul,
+.cust-service ul {
+  margin-top: 25px;
+  padding-left: 1.5rem;
+}
+.pop-categories ul li,
+.cust-service ul li {
+  list-style-type: disc;
+}
+.pop-categories .it-is-list,
+.cust-service .it-is-list {
+  font-family: "Hanken Grotesk", sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 37px;
+  color: #FFFFFF;
+}
+.pop-categories .heading-pop-txt,
+.cust-service .heading-pop-txt {
+  padding-bottom: 16px;
+  border-bottom: 3px solid #FFFFFF;
+}
+
+.cpright {
+  background: #008ECC;
+  font-family: "Hanken Grotesk", sans-serif;
+  text-align: center;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 20px;
+  color: #FFFFFF;
+  padding: 30px;
+  border: 1px solid #05ABF3;
+}
+
+i {
+  margin-left: 10px;
+  font-size: 20px !important;
+  margin-right: 10px;
 }/*# sourceMappingURL=main.css.map */
