--- a/main.css
+++ b/main.css
@@ -832,6 +832,9 @@ ul.all-lista {
     display: flex;
     justify-content: flex-end;
   }
+  .final-sec {
+    margin-top: 50px !important;
+  }
 }
 @media (max-width: 1000px) {
   .hide-deliver,
@@ -1182,7 +1185,6 @@ ul.all-lista {
   width: 100%;
   padding-top: 80px;
   gap: 90px;
-  padding-left: 8.75%;
   padding-bottom: 83px;
   flex-wrap: wrap;
 }
