--- a/main.scss
+++ b/main.scss
@@ -928,6 +928,10 @@ ul.all-lista {
         display: flex;
         justify-content: flex-end;
     }
+
+    .final-sec {
+        margin-top: 50px !important;
+    }
 }
 
 
@@ -1372,7 +1376,6 @@ ul.all-lista {
     width: 100%;
     padding-top: 80px;
     gap: 90px;
-    padding-left: 8.75%;
     padding-bottom: 83px;
     flex-wrap: wrap;
 
