--- a/main.css
+++ b/main.css
@@ -554,8 +554,16 @@ ul.all-lista {
   opacity: unset !important;
 }
 
+.button-for-flex {
+  display: flex;
+  justify-content: flex-end;
+}
+
 .sidebar-close-btn {
-  display: none;
+  display: block;
+  width: 25px;
+  height: auto;
+  padding: 0 !important;
 }
 
 .containera {
@@ -694,12 +702,6 @@ ul.all-lista {
   .card-group > .card {
     flex: none !important;
     margin-bottom: 0;
-  }
-}
-@media (min-width: 576px) {
-  .card-group .card {
-    border: 1px solid #EDEDED;
-    border-radius: 16px !important;
   }
 }
 @media (max-width: 1834px) {
@@ -1079,7 +1081,7 @@ ul.all-lista {
 }
 .slid1-card .iphone-txt {
   padding: 9px 20px;
-  font-family: "HK Grotesk";
+  font-family: "Hanken Grotesk", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
@@ -1091,26 +1093,26 @@ ul.all-lista {
 }
 .slid1-card .realme-txt {
   padding: 9px 20px;
-  font-family: "HK Grotesk";
+  font-family: "Hanken Grotesk", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
   line-height: 17px;
   letter-spacing: 0.1em;
-  color: #FFFFFF;
+  color: #222222;
   background: #F6DE8D;
   border-radius: 8px;
   margin-bottom: 25px;
 }
 .slid1-card .xiaomi-txt {
   padding: 9px 20px;
-  font-family: "HK Grotesk";
+  font-family: "Hanken Grotesk", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
   line-height: 17px;
   letter-spacing: 0.1em;
-  color: #FFFFFF;
+  color: #222222;
   background: #FFD1B0;
   border-radius: 8px;
 }
@@ -1274,4 +1276,29 @@ i {
   margin-left: 10px;
   font-size: 20px !important;
   margin-right: 10px;
+}
+
+.text-decoration-line-through {
+  font-family: "Hanken Grotesk", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 18px;
+  text-decoration-line: line-through;
+  color: #222222;
+}
+
+.text-muted {
+  font-family: "Hanken Grotesk", sans-serif;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 18px;
+  color: #249B3E !important;
+}
+
+.card-group .card:hover {
+  border: 1px solid #008ECC;
+  box-shadow: 0px 97px 39px rgba(0, 0, 0, 0.01), 0px 54px 33px rgba(0, 0, 0, 0.03), 0px 24px 24px rgba(0, 0, 0, 0.04), 0px 6px 13px rgba(0, 0, 0, 0.05), 0px 0px 0px rgba(0, 0, 0, 0.05);
+  border-radius: 16px;
 }/*# sourceMappingURL=main.css.map */
