--- a/main.scss
+++ b/main.scss
@@ -589,8 +589,20 @@ ul.all-lista {
     opacity: unset !important;
 }
 
+// .sidebar-close-btn {
+//     display: none;
+// }
+
+.button-for-flex {
+    display: flex;
+    justify-content: flex-end;
+}
+
 .sidebar-close-btn {
-    display: none;
+    display: block;
+    width: 25px;
+    height: auto;
+    padding: 0 !important;
 }
 
 
@@ -748,11 +760,8 @@ ul.all-lista {
             margin-bottom: 0;
         }
     }
-
-    .card-group .card {
-        border: 1px solid #EDEDED;
-        border-radius: 16px !important;
-    }
+    
+    
 }
 
 
@@ -1254,7 +1263,7 @@ ul.all-lista {
 
     .iphone-txt {
         padding: 9px 20px;
-        font-family: 'HK Grotesk';
+        font-family: 'Hanken Grotesk', sans-serif;
         font-style: normal;
         font-weight: 400;
         font-size: 14px;
@@ -1268,13 +1277,13 @@ ul.all-lista {
 
     .realme-txt {
         padding: 9px 20px;
-        font-family: 'HK Grotesk';
+        font-family: 'Hanken Grotesk', sans-serif;
         font-style: normal;
         font-weight: 400;
         font-size: 14px;
         line-height: 17px;
         letter-spacing: 0.1em;
-        color: #FFFFFF;
+        color: #222222;
         background: #F6DE8D;
         border-radius: 8px;
         margin-bottom: 25px;
@@ -1282,13 +1291,13 @@ ul.all-lista {
 
     .xiaomi-txt {
         padding: 9px 20px;
-        font-family: 'HK Grotesk';
+        font-family: 'Hanken Grotesk', sans-serif;
         font-style: normal;
         font-weight: 400;
         font-size: 14px;
         line-height: 17px;
         letter-spacing: 0.1em;
-        color: #FFFFFF;
+        color: #222222;
         background: #FFD1B0;
         border-radius: 8px;
     }
@@ -1474,4 +1483,31 @@ i{
     margin-left: 10px;
     font-size: 20px !important;
     margin-right: 10px;
+}
+
+
+.text-decoration-line-through{
+    font-family: 'Hanken Grotesk', sans-serif;
+font-style: normal;
+font-weight: 400;
+font-size: 16px;
+line-height: 18px;
+text-decoration-line: line-through;
+color: #222222;
+}
+
+.text-muted{
+    
+font-family: 'Hanken Grotesk', sans-serif;
+font-style: normal;
+font-weight: 600;
+font-size: 16px;
+line-height: 18px;
+color: #249B3E !important ;
+}
+
+.card-group .card:hover{
+    border: 1px solid #008ECC;
+box-shadow: 0px 97px 39px rgba(0, 0, 0, 0.01), 0px 54px 33px rgba(0, 0, 0, 0.03), 0px 24px 24px rgba(0, 0, 0, 0.04), 0px 6px 13px rgba(0, 0, 0, 0.05), 0px 0px 0px rgba(0, 0, 0, 0.05);
+border-radius: 16px;
 }
